
syntax = "proto3";
package msg;


//subCmd列表
/*
	S2C_INTO_ROOM       = 0  //进入房间               S2CRoomBaseInfo
	S2C_OTHER_INTO_ROOM = 1  //其他人进入房间          S2CUserInfo
	S2C_SEND_RED        = 2  //有人发送红包           S2CRedInfo
	S2C_READY_ROB_TICKER= 3  //准备发红包的倒计时          S2CStartTick
	S2C_START_ROB       = 4  //时间到，开始抢包         S2CRedInfo
	S2C_ROB_RED         = 5  //抢红包                  S2CRobRed
	S2C_LEAVE_TABLE     = 6  //离开房间                 S2CUserInfo
	S2C_GET_SENT_RED    = 7  //获取发送过的红包列表       S2CSendRedRecordArr
	S2C_GET_ROBBED_INFO = 8  //获取抢过的红包信息列表      S2CRobbedRedInfoArr
	S2C_GET_USER_LIST   = 9  //获取房间内用户列表         S2CUserInfoArr
	S2C_RED_DISAPPEAR   = 10 //红包消失                 S2CRedDisappear
	S2C_KICK_OUT        = 11 // 玩家被踢出               S2CKickOutUser
	S2C_CANCEL_SEND     = 12 //玩家取消发送红包           S2CRedInfo
	S2C_GET_CUR_RED_LIST = 13 //获取当前红包列表          S2CCurRedArr
	S2C_CUR_USER_COUNT = 14 //当前玩家数量                S2CUserCount
*/


//错误code列表
/*
    ERROR_CODE_OK            = 20000 //没有错误消息，主要用于程序内部判断
	ERROR_CODE_NOT_INTOROOM  = 10000 //玩家还未进入房间或没连上线
	ERROR_CODE_NOT_ENOUGH    = 10001 //玩家资金不足
	ERROR_CODE_RED_OVER      = 10002 //红包已被抢完
	ERROR_CODE_RED_MINENUM   = 10003 //红包雷号不能大于9
	ERROR_CODE_NOT_START     = 10004 //红包还没开始抢
	ERROR_CODE_USER_SENT_RED = 10005 //红包列表中 玩家已经发送过红包了
	ERROR_CODE_USER_ROBBED   = 10006 //玩家已经抢过该红包
	ERROR_CODE_CANT_CANCEL   = 10007 //不能取消发送红包，当前红包在第一个位置了
	ERROR_CODE_CANT_LEAVE   =  10008  //不能离开，用户还有红包在场上    S2CString
*/

//发送给客户端所有消息协议封包，buff是具体的结构体内容，需要端对照相应的协议解析
message S2CMsg{ //subCmd 0
    int32 mainCmd = 1;  //主消息协议
    int32 subCmd = 2;	//次消息协议
    bytes buff = 3; 	//数据流
}

message S2CUserCount {
    int64 count = 1;
}

//房间基本信息，大厅显示
message S2CRoomBaseInfo{
    int64 id = 1;//房间主键id
    string name = 2;//房间名称
    int64 limitAmount = 3;//准入金额，低于该值就不能进入
    int64 maxRed = 4;//最大红包
    repeated S2CUserInfo userArr = 5;//房间中的玩家列表
    int64 userCount = 6;//用户人数
    S2CUserInfo selfInfo = 7;//自己的信息
    S2CRedConfigInfo redConfig = 8;//红包配置信息
    int32 ticker  = 9;//倒计时的秒数
    repeated S2CCurRobUser curRobUserArr = 10;//当前抢了红包的用户列表
    int32 status = 11;//当前房间状态 1:此时正在进行发包前的倒计时 2:发包倒计时结束，开始抢包 3:抢包结束，清场
    S2CRedInfo curRobbingRed = 12;//当前正在抢的红包，如果该字段为空或者没有该字段表示当前没有在抢红包
}

//当前抢了包的玩家信息
message S2CCurRobUser {
    int64 userId = 1;
    string userName = 2;
    string head = 3;//头像
    int64 robbedAmount = 4;//抢包金额
    bool isMine = 5;//是否中雷
    int64 mineAmount = 6;//中雷金额
    int64 score = 7;//玩家当前最新余额
}

//红包配置（点击发送红包之后红包的页面数据）
message S2CRedConfigInfo{
    int32 odds = 1;//赔率
    int32 count  = 2;//发送的红包数量
    repeated int64 amount = 3;//发送档位
}

//当前红包列表
message S2CCurRedArr {
    int32 current = 1; // 当前页
    int32 size = 2;   // 每页数
    int64 total = 3;  // 总条数
    int32 pages = 4;   // 总页数
    repeated S2CCurRed redArr = 5;
    int32 selfRedPos = 6;//自己的红包位置，如果没发则没有该字段
}
message S2CCurRed{
    int64 redId = 1;
    string userName = 2;//玩家昵称
    int64 amount = 3;//红包金额
    int64 mineNum = 4;//雷号
    int64 senderId = 5;//发送者id
}

//用户信息数组
message S2CUserInfoArr {
    int32 current = 1; // 当前页
    int32 size = 2;   // 每页数
    int64 total = 3;  // 总条数
    int32 pages = 4;   // 总页数
    repeated S2CUserInfo userArr = 5;
}

//用户基本信息
message S2CUserInfo{
    int64 uid = 1;
    string name = 2;
    string head = 3;
    int64 amount = 4;//玩家余额
    int32 chairId = 5;
    int32 status = 6;//玩家状态
    int64 robbedAmount = 7;//抢到的金额
}

message S2CStartTick{
    int32 ticker  = 1;//倒计时的秒数
    S2CRedInfo redInfo = 2;//红包信息
}

//红包基本信息
message S2CRedInfo{
    int64 redId = 1;
    int64 amount = 2; //红包的金额
    int32 status = 3; //红包的状态
    int64 mineNum = 4; //红包的雷号
    int64 robbedCount =5;      //抢了的红包数量
    int64 senderId = 6;//红包发送者id
    int64 time = 7;//红包产生时间
    int32 level = 8;//红包等级，1、2、3
    string senderName = 9;//红包发送者昵称
    int64 redFlood = 10;//红包总血量
    int32 ticker = 11;//红包的抢包时间
    string senderHead = 12;//发红包者的头像
}

//抢红包的信息
message S2CRobRed{
    int64 redId = 1;
    bool isMine = 2;//true 中雷   false 未中雷
    int64 robbedAmount = 3;//抢到的金额
    int64 notRobbedCount =4;      //红包剩余血量
    int64 amount = 5;//红包的金额
    string senderName = 6;//发送红包人的名字
    int64 mineNum = 7; //雷号
    int32 level = 8;//红包等级，1、2、3
    int64 score = 9;//玩家积分（金币）
    int64 userId = 10;//抢包玩家id
    string robberName = 11;//抢包玩家名字
    string robberHead = 12;//抢包玩家头像
}

//红包列表
message S2CRedArr{
    repeated S2CRedInfo redArr = 1;
}

//狩猎记录-发送记录
message S2CSendRedRecordArr{
    int64 totalAmount = 1;//发送金额
    int64 totalCount = 2;//发送次数
    repeated S2CSendRedRecord redArr = 3;
    int32 current = 4; // 当前页
    int32 size = 5;   // 每页数
    int64 total = 6;  // 总条数
    int32 pages = 7;   // 总页数
}
message S2CSendRedRecord{
    int64 time =1;//抢包时间
    int32 level = 2;//场次级别（菜鸟狩猎场）
    int64 redAmount = 3;//红包金额
    int32 status = 4;//红包状态 1:正在抢   2:已抢完
    int64 mineNum = 5;//雷号
    int64 totalMineAmount = 6;//中雷总金额
    int64 redId = 7; //红包id
}

//狩猎记录-抢包记录
message S2CRobbedRedInfoArr {
    int64 totalAmount = 1;//抢包金额
    int64 totalCount = 2;//点击次数
    repeated S2CRobbedRedInfo robbedArr = 3;
    int32 current = 4; // 当前页
    int32 size = 5;   // 每页数
    int64 total = 6;  // 总条数
    int32 pages = 7;   // 总页数
}
message S2CRobbedRedInfo{
    int64 time =1;//抢包时间
    int32 level = 2;//场次级别（菜鸟狩猎场）
    string senderName = 3;//发送者名字
    int64 amount = 4;//盈利金额，如果中雷就是负数
    int64 redAmount = 5;//红包金额
    bool isMine = 6;//是否中雷
    int64 mineNum = 7;//雷号
}


//每秒更新红包血量
message S2CRedFlood{
    int64 redId = 1;
    int64 robbedCount =2;      //红包当前血量
    int64 redFlood = 3;//红包总血量
}

//红包消失
message S2CRedDisappear {
    int64 redId = 1;//红包id
    int32 level = 2;//红包等级
    int32 ticker = 3;//倒计时时间
    int64 maxUid = 4;//抢红包最多的用户id
    int64 senderId = 5;//红包发送者id
    int64 senderScore = 6;//红包发送者当前最新余额
    repeated S2CCurRobUser robUserArr = 7;//所有玩家的抢包信息
}

//玩家被踢出
message S2CKickOutUser{
    int64 userId = 1;
    string reason = 2;//踢出原因
    int32 reasonInt = 3;// 1:超过5把，2：玩家金额不足
}

//错误消息
message S2CString {
    string msg = 1;//字符串消息
}